# template-wasm-rust-library

./: .gitignore  Cargo.toml  README.md  flowscripter_template_wasm_rust_library.d.ts  flowscripter_template_wasm_rust_library.js  flowscripter_template_wasm_rust_library_bg.wasm
.github/workflows/: release-wasm-rust-library.yml
src/: lib.rs
tests/: integration_test.rs
