[package]
name = "template_wasm_rust_library"
version = "0.1.0"
edition = "2021"
description = "Project template for a Rust library compiled to WASM."
homepage = "https://github.com/flowscripter"
license = "MIT"
repository = "https://github.com/flowscripter/template-wasm-rust-library"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
wasm-bindgen = "0.2"
flowscripter_template_rust_library = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
