[package]
name = "flowscripter_template_wasm_rust_library"
version ="1.1.9"
edition = "2021"
description = "Project template for a Rust library compiled to WASM."
homepage = "https://github.com/flowscripter"
license = "MIT"
repository = "https://github.com/flowscripter/template-wasm-rust-library"
exclude = [".github/"]

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
wasm-bindgen = "0.2.83"
flowscripter_template_rust_library = "1.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
